feat: Implement team-based game system with ship selection and dynamic team management
- Added TeamManager to handle team assignments and game modes
- Created BaseShip class to standardize ship behavior across player and enemy entities
- Developed ShipSelectionUI with dynamic ship preview and color customization
- Introduced ship configuration system with different ship types and stats
- Enhanced asset loading with consistent ship model scaling
- Implemented team color and team-based collision detection
- Updated webpack configuration for improved module resolution
- Added new sound effects for weapon switching and charging

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
             <button id="start-button" class="glow-button">START GAME</button>
         </div>
     </div>
+
+    <!-- Game container -->
+    <div id="game-container"></div>
     
     <!-- Simple HUD for controls info -->
     <div class="controls-info hidden">
