feat: Add ship change option to in-game ESC menu and player name input
- Implemented player name input on start screen
- Added ship change functionality to in-game ESC menu
- Updated ShipSelectionUI to support dynamic ship selection during gameplay
- Enhanced start screen UI with player name input and styling
- Added console logging for player name and ship selection
- Improved error handling for ship model loading

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
     <div id="start-screen" class="hidden">
         <div class="start-content">
             <h1>QUANTUM DRIFT</h1>
+            <div class="player-input">
+                <input type="text" id="player-name" maxlength="15" placeholder="Enter your pilot name" />
+                <p class="input-info">Your name will be visible to other players</p>
+            </div>
             <button id="start-button" class="glow-button">START GAME</button>
         </div>
     </div>
