feat: Add multiplayer networking with Socket.io and server infrastructure
- Implemented NetworkManager for WebSocket communication
- Added server.js with Socket.io for real-time player synchronization
- Created multiplayer connection status and player count indicators
- Integrated network events for player join/leave, position updates
- Added UUID for unique player identification
- Updated package.json with multiplayer dependencies
- Enhanced README with multiplayer setup instructions
- Added CSS styles for multiplayer UI elements

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,18 @@
     <!-- Game container -->
     <div id="game-container"></div>
     
+    <!-- Multiplayer Info -->
+    <div id="multiplayer-info" class="hidden">
+        <div class="connection-indicator">
+            <span>Connection: </span>
+            <span id="connection-status">Disconnected</span>
+        </div>
+        <div class="players-indicator">
+            <span>Players: </span>
+            <span id="players-count">0</span>
+        </div>
+    </div>
+    
     <!-- Simple HUD for controls info -->
     <div class="controls-info hidden">
         <p>W/↑: Forward | S/↓: Backward</p>
