--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quantum Drift</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/controls.css">
 </head>
 <body>
     <div id="loading-screen">
@@ -50,4 +52,5 @@
         <p>Avoid the colored obstacles!</p>
     </div>
 </body>
+<script type="module" src="./index.js"></script>
 </html> 
