Fix collision detection and map synchronization for new obstacle structure
- Fix all obstacle.position references to use obstacle.data.position
- Update collision detection in Player.js, WeaponSystem.js, and index.js
- Fix MiniMap to work with new obstacle format
- Add comprehensive error handling and debugging
- Ensure map synchronization works properly
- Fix spawn position generation for multiplayer
- Add MAP_SYNCHRONIZATION_FIX.md checklist

Resolves collision detection crashes and ensures obstacles are properly visible

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <div id="death-screen" class="death-screen hidden">
         <div class="death-content">
             <h2>YOU DIED</h2>
-            <p>Respawning in 5 seconds...</p>
+            <p id="respawn-countdown">Respawning in 5 seconds...</p>
             <button id="respawn-button" class="glow-button">Respawn Now</button>
         </div>
     </div>
